@@ -119,6 +119,9 @@ The Authors
 * Johan Samuelsson <spot@triad.se>
 - Amiga port and fixes
 
+* Michael Schwendt <mschwendt@gmail.com>
+- Audacious 3.0 plugin
+
 * Attila Sipos <h430827@stud.u-szeged.hu>
 - SQSH decruncher checksum
 
